--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     display: flex;
     width: 100%;
     height: 80px;
-    background-color: #dd2020;
+    /* background-color: #dd2020; */
 
     justify-content: space-between;
     align-items: center;
@@ -68,7 +68,6 @@
 #product_description {
     padding: 2rem 2rem;
     background-color: #dd2020;
-    color: #e5e5e5;
     border-radius: 10px;
     border-color: black;
     border-style: solid;
